# prisoners-dilemma

./: .gitignore  README.md  pyproject.toml
prisoners_dilemma/: main.py
prisoners_dilemma/agents/: random.py  tit_for_tat.py
